--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,9 @@
-##spring.application.name=flightbooking
-#
-#spring.datasource.url=jdbc:mysql://localhost:3306/flightdb
-#spring.datasource.username=root
-#spring.datasource.password=Shivani@0710
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-#server.port=8080
+
 
 
 spring.datasource.url=jdbc:mysql://localhost:3306/flightdb
 spring.datasource.username=root
-spring.datasource.password=Shivani@0710
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
